--- a/packages/kernels/6.1/zfs-kmod/definition.yaml
+++ b/packages/kernels/6.1/zfs-kmod/definition.yaml
@@ -1,5 +1,5 @@
 name: zfs-kmod
-version: 2.2.0
+version: 2.2.0+1
 category: kernel-6.1
 requires:
 - name: zfs-common
@@ -10,4 +10,4 @@ annotations:
 labels:
   emerge.packages: sys-fs/zfs-kmod
   kernel.suffix: macaroni
-  kernel.version: 6.1.59
+  kernel.version: 6.1.60
