--- a/packages/atoms/boot/sys-kernel/dracut/definition.yaml
+++ b/packages/atoms/boot/sys-kernel/dracut/definition.yaml
@@ -52,4 +52,4 @@ labels:
   kit: core-kit
   original.package.name: sys-kernel/dracut
   original.package.slot: "0"
-  original.package.version: 059
+  original.package.version: "059"
