--- a/portage-converter/browsers.yaml
+++ b/portage-converter/browsers.yaml
@@ -88,6 +88,14 @@ global_annotations:
 artefacts:
 
 - tree: packages/atoms/browsers
+  annotations:
+    desktop_browser: true
+    subsets:
+      rules:
+        devel:
+          - "^/usr/include/"
+        portage:
+          - "^/var/db/pkg/"
   uses:
     disabled:
       - static-libs
@@ -115,6 +123,14 @@ artefacts:
     - www-client/brave-bin
 
 - tree: packages/atoms/browsers
+  annotations:
+    desktop_browser: true
+    subsets:
+      rules:
+        devel:
+          - "^/usr/include/"
+        portage:
+          - "^/var/db/pkg/"
   uses:
     disabled:
       - static-libs
@@ -151,6 +167,14 @@ artefacts:
       packages:
         - name: macaroni-funtoo-race17
           category: seed
+  annotations:
+    desktop_browser: true
+    subsets:
+      rules:
+        devel:
+          - "^/usr/include/"
+        portage:
+          - "^/var/db/pkg/"
   finalizer:
     shell:
       - "/bin/bash"
@@ -167,6 +191,25 @@ artefacts:
     - www-client/google-chrome
     - www-client/google-chrome-beta
     - www-client/google-chrome-unstable
+
+  mutations:
+    buildtime_deps:
+      packages:
+        - name: macaroni-funtoo-race17
+          category: seed
+  finalizer:
+    shell:
+      - "/bin/bash"
+      - "-c"
+    install:
+      - >-
+        source /etc/profile &&
+        macaronictl env-update &&
+        whip hook gtk.mime_update_db &&
+        whip hook gtk.glib_update_schemas &&
+        whip hook gtk.gtk_update_icons
+
+  packages:
     - www-plugins/chrome-binary-plugins:stable
     - www-plugins/chrome-binary-plugins:unstable
     - www-plugins/chrome-binary-plugins:beta
