--- a/packages/kernels/6.5/lkrg/definition.yaml
+++ b/packages/kernels/6.5/lkrg/definition.yaml
@@ -1,9 +1,9 @@
 name: lkrg
-version: 0.9.7
+version: 0.9.7+1
 category: kernel-6.5
 annotations:
   kernel_module: true
 labels:
   emerge.packages: app-antivirus/lkrg
   kernel.suffix: macaroni
-  kernel.version: 6.5.8
+  kernel.version: 6.5.9
