--- a/packages/kernels/5.10/zfs-kmod/definition.yaml
+++ b/packages/kernels/5.10/zfs-kmod/definition.yaml
@@ -1,5 +1,5 @@
 name: zfs-kmod
-version: 2.2.0
+version: 2.2.0+1
 category: kernel-5.10
 requires:
 - name: zfs-common
@@ -14,4 +14,4 @@ annotations:
 labels:
   emerge.packages: sys-fs/zfs-kmod
   kernel.suffix: macaroni
-  kernel.version: 5.10.198
+  kernel.version: 5.10.199
