--- a/packages/atoms/base-python/dev-python/pygments/definition.yaml
+++ b/packages/atoms/base-python/dev-python/pygments/definition.yaml
@@ -1,18 +1,19 @@
 name: pygments
-version: 2.17.0
+version: 2.17.1
 category: dev-python
 use_flags:
-- -doc
 - -python_targets_python2_7
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
-- -test
 - python_targets_python3_9
 requires:
-- name: setuptools
+- name: python
   version: '>=0'
-  category: dev-python
+  category: dev-lang-3.9
+- name: python-exec
+  version: '>=0'
+  category: dev-lang-2
 annotations:
   subsets:
     rules:
@@ -20,9 +21,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: Pygments is a syntax highlighting package written in Python
+description: Pygments is a syntax highlighting package written in Python.
 uri:
-- https://pygments.org/ https://pypi.org/project/Pygments/
+- https://pypi.org/project/Pygments/
 license: BSD
 labels:
   BDEPEND: python_targets_python3_10? ( dev-lang/python:3.10 ) python_targets_python3_7?
@@ -30,8 +31,6 @@ labels:
     ( dev-lang/python:3.8 ) >=dev-lang/python-exec-2:=[python_targets_python3_10(-)?,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,-python_single_target_python3_10(-),-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-)]
     >=dev-python/gpep517-6[python_targets_python3_10(-)?,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,-python_single_target_python3_10(-),-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-)]
     >=dev-python/hatchling-1.3.1[python_targets_python3_10(-)?,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,-python_single_target_python3_10(-),-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-)]
-  DEPEND: test? ( dev-python/pytest[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    virtual/ttf-fonts )
   IUSE: python_targets_python2_7 python_targets_python3_10 python_targets_python3_7
     python_targets_python3_9 python_targets_python3_8
   RDEPEND: python_targets_python2_7? ( dev-python/pygments-compat ) python_targets_python3_10?
@@ -41,4 +40,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/pygments
   original.package.slot: "0"
-  original.package.version: 2.17.0-r1
+  original.package.version: 2.17.1
