--- a/packages/atoms-extra/server/dev-libs/libbson/build.yaml
+++ b/packages/atoms-extra/server/dev-libs/libbson/build.yaml
@@ -10,7 +10,9 @@ prelude:
 - >-
   rm /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/*.ebuild &&
   cp libbson-1.24.4.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/
-
+  cd /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/ &&
+  ebuild libbson-1.24.4.ebuild digest &&
+  cd -
 - |
   eval 'mkdir -p /var/cache/portage/distfiles || true' && \
   chown portage:portage -R /var/cache/portage/ && \
