--- a/packages/atoms-extra/server/dev-libs/libbson/build.yaml
+++ b/packages/atoms-extra/server/dev-libs/libbson/build.yaml
@@ -9,7 +9,7 @@ prelude:
 # Temporary patch libbson ebuild (see FL-11724)
 - >-
   rm /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/*.ebuild &&
-  cp libbson-1.24.4.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/
+  cp libbson-1.24.4.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/ &&
   cd /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/ &&
   ebuild libbson-1.24.4.ebuild digest &&
   cd -
