--- a/packages/atoms-extra/db/dev-cpp/yaml-cpp/definition.yaml
+++ b/packages/atoms-extra/db/dev-cpp/yaml-cpp/definition.yaml
@@ -1,5 +1,5 @@
 name: yaml-cpp
-version: 0.7.0
+version: 0.8.0
 category: dev-cpp
 use_flags:
 - -test
@@ -16,11 +16,10 @@ uri:
 license: MIT
 labels:
   BDEPEND: dev-util/ninja dev-util/cmake
-  DEPEND: test? ( dev-cpp/gtest[-mgorny(-)] )
-  IUSE: test abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32
-    abi_s390_32 abi_s390_64
+  DEPEND: test? ( dev-cpp/gtest )
+  IUSE: test
   emerge.packages: dev-cpp/yaml-cpp
   kit: dev-kit
   original.package.name: dev-cpp/yaml-cpp
   original.package.slot: "0"
-  original.package.version: 0.7.0
+  original.package.version: 0.8.0
