--- a/packages/seeds/macaroni-funtoo-race20/build.yaml
+++ b/packages/seeds/macaroni-funtoo-race20/build.yaml
@@ -101,6 +101,7 @@ steps:
   toolchain/x11-misc2
   toolchain/desktop2
   toolchain/base-kde5
+  toolchain/office
   &&
   luet cleanup &&
   /usr/bin/gcc-config 1 &&
