--- a/packages/atoms-extra/tools/app-arch/upx-bin/definition.yaml
+++ b/packages/atoms-extra/tools/app-arch/upx-bin/definition.yaml
@@ -1,5 +1,5 @@
 name: upx-bin
-version: 4.1.0+1
+version: 4.2.1
 category: app-arch
 use_flags:
 - -doc
@@ -22,4 +22,4 @@ labels:
   kit: dev-kit
   original.package.name: app-arch/upx-bin
   original.package.slot: "0"
-  original.package.version: 4.1.0
+  original.package.version: 4.2.1
