--- a/packages/atoms/base-kde6/kde-apps-5/messagelib/build.yaml
+++ b/packages/atoms/base-kde6/kde-apps-5/messagelib/build.yaml
@@ -7,7 +7,7 @@ prelude:
   {{- if .Values.use_flags }}
   USE="{{ join " " .Values.use_flags }}" emerge {{ ( index .Values.labels "emerge.packages" ) }} -pv -t && \
   {{- else }}
-  emerge -j ${JOBS} {{ ( index .Values.labels "emerge.packages" ) }} -pv -t && \
+  emerge -j ${JOBS} {{ ( index .Values.labels "emerge.packages" ) }} -pv -t || true && \
   {{- end }}
   {{- if .Values.use_flags }}
   USE="{{ join " " .Values.use_flags }}" emerge -j ${JOBS} --nodeps {{ ( index .Values.labels "emerge.packages" ) }}
