--- a/packages/atoms/base-kde6/kde-apps-5/messagelib/build.yaml
+++ b/packages/atoms/base-kde6/kde-apps-5/messagelib/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+- >-
+  luet repo update &&
+  luet i -y gpgme-qt && luet cleanup --purge-repos
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
