--- a/packages/atoms/base-tools/net-misc/dhcpcd/build.yaml
+++ b/packages/atoms/base-tools/net-misc/dhcpcd/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+- >-
+  luet repo update &&
+  luet upgrade -y &&
+  luet cleanup --purge-repos
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
