--- a/packages/atoms/base-python/dev-lang-stable/rust-bin/finalize.yaml
+++ b/packages/atoms/base-python/dev-lang-stable/rust-bin/finalize.yaml
@@ -1,6 +1,10 @@
 shell:
 - /bin/bash
 - -c
+install:
+- source /etc/profile && eval 'macaronictl env-update || true' && eval 'macaronictl
+  etc-update || true'
 uninstall:
 - eval 'rm -vf /etc/env.d/50rust-bin-{{ ( index .Values.labels "original.package.version"
-  ) }} || true' && eval 'macaronictl env-update || true'
+  ) }} || true' && source /etc/profile && eval 'macaronictl env-update || true' &&
+  eval 'macaronictl etc-update || true'
