--- a/packages/atoms/base-kde6/kde-apps-5/libksieve/build.yaml
+++ b/packages/atoms/base-kde6/kde-apps-5/libksieve/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: calendarsupport
+- name: mailcommon
   version: '>=0'
   category: kde-apps-5
