--- a/packages/atoms/base-net/net-firewall/nftables/definition.yaml
+++ b/packages/atoms/base-net/net-firewall/nftables/definition.yaml
@@ -1,5 +1,5 @@
 name: nftables
-version: 1.0.8+1
+version: 1.0.9
 category: net-firewall
 use_flags:
 - -doc
@@ -43,4 +43,4 @@ labels:
   kit: net-kit
   original.package.name: net-firewall/nftables
   original.package.slot: "0"
-  original.package.version: 1.0.8
+  original.package.version: 1.0.9
