--- a/packages/kernels/common/zfs-common/definition.yaml
+++ b/packages/kernels/common/zfs-common/definition.yaml
@@ -1,6 +1,6 @@
 name: zfs-common
-version: 2.2.0+2
+version: 2.2.1
 category: kernel
 labels:
   kernel.branch: "5.10"
-  zfs.version: 2.2.0
+  zfs.version: 2.2.1
