--- a/packages/kernels/6.5/zfs-kmod/definition.yaml
+++ b/packages/kernels/6.5/zfs-kmod/definition.yaml
@@ -1,5 +1,5 @@
 name: zfs-kmod
-version: 2.2.0+1
+version: 2.2.1
 category: kernel-6.5
 requires:
 - name: zfs-common
@@ -10,4 +10,4 @@ annotations:
 labels:
   emerge.packages: sys-fs/zfs-kmod
   kernel.suffix: macaroni
-  kernel.version: 6.5.9
+  kernel.version: 6.5.12
